adding the capability to put a ScriptEngine in a security sandbox.